EPBDS-15767 Resolve misc compilation warnings
- ProtectedMembersInFinalClass: make methods package-private in NameChecker
- ClassNewInstance: use getDeclaredConstructor().newInstance() in ProjectJacksonObjectMapperFactoryBean
- BadImport: qualify Builder import in JacksonObjectMapperFactoryBean
- UnnecessaryLambda: convert lambda constant to method in MethodInfo